--- a/horaire_films.html
+++ b/horaire_films.html
@@ -46,7 +46,7 @@
                         duree.textContent = 'Durée: ' + film.duree;
 
                         const horaire = document.createElement('p');
-                        horaire.textContent = 'Horaire: ' + film.horaire.join(', ');
+                        horaire.textContent = '' + film.horaire.join(', ');
 
                         detailsDiv.appendChild(title);
                         detailsDiv.appendChild(genre);
