--- a/horaire_films.html
+++ b/horaire_films.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <title>Horaire des Films</title>
+    <title>HORAIRE DES FILMS</title>
     <style>
         body { font-family: Arial, sans-serif; margin: 20px; }
         .film { display: flex; margin-bottom: 20px; }
