--- a/horaire_films.html
+++ b/horaire_films.html
@@ -16,7 +16,7 @@
     </style>
 </head>
 <body>
-    <h1>Horaire des Films</h1>
+    <h1>HORAIRE DES FILMS</h1>
     <div id="films-container"></div>
 
     <script>
