--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
+   <header>
+ <a href=https://www.cine-flash.com/>
+ <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726" alt>
+ </a>
+ </header>
 <head>
   <meta charset="UTF-8">
   <title>Horaires des films</title>
@@ -12,7 +17,7 @@
   </style>
 </head>
 <body>
-  <h1>🎬 Séances à venir</h1>
+  <h1>🎬 HORAIRE DES FILMS</h1>
   <div id="films"></div>
 
   <script>
@@ -60,3 +65,4 @@
   </script>
 </body>
 </html>
+
