--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 </head>
 <body>
 
-  <h1>PROGRAMME DES SÉANCES</h1>
+  <h1>HORAIRE</h1>
   <div id="grid" class="grid">
     <!-- Les cartes films seront injectées ici -->
   </div>
@@ -137,7 +137,7 @@
               </div>
               <div class="description">${film.description}</div>
               <div class="horaires">
-                <strong>Horaires :</strong>
+                /** <strong>Horaires :</strong> */
                 <ul></ul>
               </div>
             </div>
