--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     body {
-      font-family: Arial, sans-serif;
+      font-family: Ubuntu;
       background: #f4f4f4;
       color: #333;
       padding: 1em;
