--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
               </div>
               <div class="description">${film.description}</div>
               <div class="horaires">
-                /** <strong>Horaires :</strong> */
+                <!-- <strong>Horaires :</strong> -->
                 <ul></ul>
               </div>
             </div>
