--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             <div class="card-content">
               <h2>${film.title}</h2>
               <div class="meta">
-                ${film.rating} | ${film.duration} | ${film.genres.join(', ')}
+               <strong> ${film.rating} </strong> | ${film.duration} | ${film.genres.join(', ')}
               </div>
               <div class="description">${film.description}</div>
               <div class="horaires">
