--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     .card img {
       width: 75%;
       height: 250px;
-      object-fit: cover;
+      object-fit: contain;
     }
 
     .card-content {
