--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
   <title>Programme des séances</title>
   <style>
     /* Reset basique */
@@ -18,7 +19,7 @@
     }
 
     body {
-      font-family: Ubuntu;
+      font-family: Roboto;
       background: #f4f4f4;
       color: #333;
       padding: 1em;
