--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://fonts.googleapis.com/css?family=Roboto&amp;display=swap" rel="stylesheet">
+  <meta name="description" content="Chercher des heures de séances de films au Cinéma Centre-Ville">
   <title>Programme des séances</title>
   <style>
     /* Reset basique */
