--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
             const li = document.createElement('li');
             // on affiche "Jour — hh:mm, hh:mm DLX" par exemple
-            li.innerHTML = `<strong>${label}</strong> ${times.join(', ')}`;
+            li.innerHTML = `<strong>${label}</strong> ${times.join(' | ')}`;
             ul.appendChild(li);
           });
 
