--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="fr">
-   <header>
+<body style="background-color:black;">
+</body>
+<header>
  <a href=https://www.cine-flash.com/>
  <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726" alt="Cinéma centre-ville Laser par BARCO" width="1200" height="380" align="center">
  </a>
- </header>
+</header>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
