--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
   </style>
 </head>
 <body>
-
-  <h1>HORAIRE</h1>
+ 
+  <h1 style="color:White;">HORAIRE</h1>
   <div id="grid" class="grid">
     <!-- Les cartes films seront injectées ici -->
   </div>
