--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <body style="background-color:black;">
 </body>
 <header>
+ <style>
+  img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+   }
+</style>
  <a href=https://www.cine-flash.com/>
  <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726" alt="Cinéma centre-ville Laser par BARCO" width="1200" height="380" align="center">
  </a>
