--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 </head>
 <body>
  
-  <h1 style="color:White;">HORAIRE</h1>
+  <!-- <h1 style="color:White;">HORAIRE</h1> -->
   <div id="grid" class="grid">
     <!-- Les cartes films seront injectées ici -->
   </div>
