--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
   <div class="grid" id="films"></div>
 
   <script>
-    fetch("films1.json")
+    fetch("films.json")
       .then(response => response.json())
       .then(data => {
         const container = document.getElementById("films");
