--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Programme des séances</title>
-  https://fonts.googleapis.com/css?family=Roboto&display=swap
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
   <meta name="description" content="Chercher des heures de séances de films au Cinéma Centre-Ville">
   <style>
     body {
@@ -18,6 +18,13 @@
       text-align: center;
       margin-bottom: 1em;
       font-size: 2em;
+    }
+
+    header img {
+      display: block;
+      margin: 0 auto 1em;
+      max-width: 100%;
+      border-radius: 8px;
     }
 
     .grid {
@@ -36,11 +43,6 @@
       display: flex;
       flex-direction: column;
       padding: 1em;
-    }
-
-    .card img {
-      width: 100%;
-      height: auto;
     }
 
     .title {
@@ -84,32 +86,25 @@
 
     .attributs {
       font-size: 0.85em;
-      margin-left: 8px;
-      color: #ddd;
-    }
-
-    header img {
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
+      margin-left: 6px;
+      color: #666;
     }
   </style>
 </head>
 <body>
   <header>
-    <atps://www.cine-flash.com/
-      https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726
+    <a href="https://www.cine-flash.com/">
+      <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"
+           alt="Cinéma centre-ville Laser par BARCO"
+           width="1200" height="380">
     </a>
   </header>
-
-  <h1>🎬 Programme des séances</h1>
-  <div class="grid" id="films"></div>
-
   <script>
     fetch("films.json")
       .then(response => response.json())
       .then(data => {
         const container = document.getElementById("films");
+
         data.films.forEach(film => {
           const card = document.createElement("div");
           card.className = "card";
@@ -140,23 +135,32 @@
             const horaireDiv = document.createElement("div");
             horaireDiv.className = "horaire";
 
-            if (seance.attributs.includes("COMPLET")) {
+            const parts = seance.horaire.split(" ");
+            const heure = parts[0];
+            const attributs = parts.slice(1).sort();
+
+            horaireDiv.textContent = heure;
+
+            if (attributs.includes("COMPLET")) {
               horaireDiv.classList.add("complet");
             }
 
-            horaireDiv.textContent = seance.horaire;
+            if (attributs.length > 0) {
+              const attrSpan = document.createElement("span");
+              attrSpan.className = "attributs";
+              attrSpan.textContent = attributs.join(" ");
+              horaireDiv.appendChild(attrSpan);
+            }
 
-            const attrSpan = document.createElement("span");
-            attrSpan.className = "attributs";
-            attrSpan.textContent = seance.attributs.join(", ");
-
-            horaireDiv.appendChild(attrSpan);
             seancesDiv.appendChild(horaireDiv);
           });
 
           card.appendChild(seancesDiv);
           container.appendChild(card);
         });
+      })
+      .catch(error => {
+        console.error("Erreur lors du chargement du fichier films.json :", error);
       });
   </script>
 </body>
