--- a/index.html
+++ b/index.html
@@ -115,8 +115,10 @@
 </head>
 <body>
   <header>
-    https://www.cine-flash.com/
-      https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726
+    <a href="https://www.cine-flash.com/">
+      <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"
+           alt="Cinéma centre-ville Laser par BARCO"
+           width="1200" height="380">
     </a>
   </header>
 
