--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 
   <hr>
 
-  <h1>🎬 Programme des séances</h1>
+ <!-- <h1>🎬 Programme des séances</h1> -->
   <div class="grid" id="films"></div>
 
   <script>
