--- a/index.html
+++ b/index.html
@@ -135,9 +135,12 @@
 </head>
 <body>
   <header>
-    <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726r>
-
-  <div class="date" id="date"></div>
+    <a href="https://www.cine-flash.com/">
+      <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"
+           alt="Cinéma centre-ville Laser par BARCO"
+           width="1200" height="380">
+    </a>
+  </header>
 
   <div class="legende" id="legende"></div>
 
