--- a/index.html
+++ b/index.html
@@ -139,7 +139,8 @@
       <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"
            alt="Cinéma centre-ville Laser par BARCO"
           legende" id="legende"></div>
-
+    </a>
+  </header>
   <hr>
 
   <div class="grid" id="films"></div>
