--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200">
   <title>Programme des séances</title>
-  <link href="https://fonts.googleapis.com/css?family=Roboto&amp;
+  https://fonts.googleapis.com/css?family=Roboto
   <meta name="description" content="Chercher des heures de séances de films au Cinéma Centre-Ville">
   <style>
     body {
@@ -135,18 +135,23 @@
 </head>
 <body>
   <header>
-    <a href="https://www.c.com/
+    <a href="https://www.cine-flash.com/">
       <img src="https://veeziustaskscm.blob.core.windows.net/veezi-ticketing-assets/jjwk2hm92x8zmdt4ys4sr1vvp0/banner?202508291726"
            alt="Cinéma centre-ville Laser par BARCO"
-          legende" id="legende"></div>
+           width="1200" height="380">
     </a>
   </header>
+
+  <div class="date" id="date"></div>
+
+  <div class="legende" id="legende"></div>
+
   <hr>
 
   <div class="grid" id="films"></div>
 
   <script>
-    // 📅 Affiche la date au format "Jour x, Mois"
+    // 📅 Affiche la date au format "Mardi 2, Septembre"
     const jours = ["Dimanche", "Lundi", "Mardi", "Mercredi", "Jeudi", "Vendredi", "Samedi"];
     const mois = ["Janvier", "Février", "Mars", "Avril", "Mai", "Juin", "Juillet", "Août", "Septembre", "Octobre", "Novembre", "Décembre"];
     const aujourdHui = new Date();
@@ -184,3 +189,77 @@
 
         const container = document.getElementById("films");
         data.films.forEach(film => {
+          const card = document.createElement("div");
+          card.className = "card";
+
+          if (film.affiche) {
+            const img = document.createElement("img");
+            img.className = "poster";
+            img.src = film.affiche;
+            img.alt = `Affiche de ${film.titre}`;
+            card.appendChild(img);
+          }
+
+          const title = document.createElement("div");
+          title.className = "title";
+          title.textContent = film.titre;
+          card.appendChild(title);
+
+          if (film.rating) {
+            const rating = document.createElement("div");
+            rating.className = "rating";
+            rating.textContent = film.rating;
+            card.appendChild(rating);
+          }
+
+          if (film.content) {
+            const content = document.createElement("div");
+            content.className = "content";
+            content.textContent = film.content;
+            card.appendChild(content);
+          }
+
+          if (film.synopsis) {
+            const synopsis = document.createElement("div");
+            synopsis.className = "synopsis";
+            synopsis.textContent = film.synopsis;
+            card.appendChild(synopsis);
+          }
+
+          const seancesDiv = document.createElement("div");
+          seancesDiv.className = "seances";
+
+          film.horaire.forEach(seance => {
+            const horaireDiv = document.createElement("div");
+            horaireDiv.className = "horaire";
+
+            const parts = seance.horaire.split(" ");
+            const heure = parts[0];
+            const attributs = parts.slice(1).sort();
+
+            horaireDiv.textContent = heure;
+
+            if (attributs.includes("COMPLET")) {
+              horaireDiv.classList.add("complet");
+            }
+
+            if (attributs.length > 0) {
+              const attrSpan = document.createElement("span");
+              attrSpan.className = "attributs";
+              attrSpan.textContent = attributs.join(" ");
+              horaireDiv.appendChild(attrSpan);
+            }
+
+            seancesDiv.appendChild(horaireDiv);
+          });
+
+          card.appendChild(seancesDiv);
+          container.appendChild(card);
+        });
+      })
+      .catch(error => {
+        console.error("Erreur lors du chargement du fichier films.json :", error);
+      });
+  </script>
+</body>
+</html>
