--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=1200">
   <title>Programme des séances</title>
-  https://fonts.googleapis.com/css2?family=Roboto&display=swap
+ <link href="https://fonts.googleapis.com/css2to&display=swap
   <meta name="description" content="Chercher des heures de séances de films au Cinéma Centre-Ville">
   <style>
     body {
