--- a/index.html
+++ b/index.html
@@ -80,6 +80,7 @@
       object-fit: contain;
       border-radius: 8px;
       margin-bottom: 1em;
+      text-align: left;
     }    
 
 
@@ -93,6 +94,7 @@
     .rating {
       font-weight: bold;
       margin-bottom: 0.5em;
+      color: #00bfff;
     }
 
     .synopsis {
